// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exception screen component Renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgb(5, 5, 13)",
      "flex": 1,
      "justifyContent": "space-around",
      "padding": "5%",
    }
  }
>
  <StatusBar
    animated={false}
    barStyle="light-content"
    showHideTransition="fade"
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "space-around",
        "marginTop": 85,
      }
    }
  >
    <Image
      source={
        Object {
          "process": [Function],
        }
      }
      style={
        Object {
          "height": 160,
          "width": 160,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "marginTop": 25,
          "paddingHorizontal": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ffefdf",
            "fontFamily": "TT Commons",
            "fontSize": 30,
            "textAlign": "center",
          }
        }
      >
        Uh oh.
      </Text>
      <Text
        numberOfLines={5}
        style={
          Object {
            "color": "#ffefdf",
            "fontFamily": "TT Commons",
            "fontSize": 20,
            "marginTop": 15,
            "textAlign": "center",
          }
        }
      >
        Unknown Error.
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "black",
        "marginTop": 20,
      }
    }
  >
    <ThemedComponent
      onPress={[Function]}
      raised={true}
      style={
        Object {
          "container": Object {
            "backgroundColor": "#942f51",
            "borderRadius": 4,
            "height": 48,
          },
          "text": Object {
            "color": "white",
            "fontFamily": "TT Commons",
            "fontSize": 22,
            "fontWeight": "100",
            "paddingHorizontal": 15,
            "paddingVertical": 15,
          },
        }
      }
      text="Go back"
      upperCase={false}
    />
  </View>
</View>
`;

exports[`Exception screen component Renders correctly when no error object is provided 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgb(5, 5, 13)",
      "flex": 1,
      "justifyContent": "space-around",
      "padding": "5%",
    }
  }
>
  <StatusBar
    animated={false}
    barStyle="light-content"
    showHideTransition="fade"
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "space-around",
        "marginTop": 85,
      }
    }
  >
    <Image
      source={
        Object {
          "process": [Function],
        }
      }
      style={
        Object {
          "height": 160,
          "width": 160,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "marginTop": 25,
          "paddingHorizontal": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ffefdf",
            "fontFamily": "TT Commons",
            "fontSize": 30,
            "textAlign": "center",
          }
        }
      >
        Uh oh.
      </Text>
      <Text
        numberOfLines={5}
        style={
          Object {
            "color": "#ffefdf",
            "fontFamily": "TT Commons",
            "fontSize": 20,
            "marginTop": 15,
            "textAlign": "center",
          }
        }
      >
        There was an error with your request.
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "black",
        "marginTop": 20,
      }
    }
  >
    <ThemedComponent
      onPress={[Function]}
      raised={true}
      style={
        Object {
          "container": Object {
            "backgroundColor": "#942f51",
            "borderRadius": 4,
            "height": 48,
          },
          "text": Object {
            "color": "white",
            "fontFamily": "TT Commons",
            "fontSize": 22,
            "fontWeight": "100",
            "paddingHorizontal": 15,
            "paddingVertical": 15,
          },
        }
      }
      text="Go back"
      upperCase={false}
    />
  </View>
</View>
`;
